Fix tag spacing/alignment on updates

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -161,7 +161,6 @@ img.post-thumb {
   color: gray;
   text-align: right;
   clear: right;
-  margin-top: -15px;
 }
 .tags span {
   padding-left: 5px;
